sintactico.output
Estado 86 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: program $end

    1 $@1: %empty

    2 program: $@1 PROGRAM ID LPAREN RPAREN SEMICOLON functions declarations compound_statement PUNTO

    3 functions: functions function SEMICOLON
    4          | %empty

    5 function: FUNCTION ID LPAREN CONST identifiers DOSPUNTOS type RPAREN DOSPUNTOS type declarations compound_statement

    6 declarations: declarations VAR identifiers DOSPUNTOS type SEMICOLON
    7             | declarations CONST constants SEMICOLON
    8             | %empty

    9 identifiers: ID
   10            | identifiers COMMA ID

   11 type: INTEGER

   12 constants: ID ASSIGNOP expression
   13          | constants COMMA ID ASSIGNOP expression

   14 compound_statement: BEGINN optional_statements END

   15 optional_statements: statements
   16                    | %empty

   17 statements: statement
   18           | statements SEMICOLON statement

   19 statement: ID ASSIGNOP expression
   20          | IF expression THEN statement
   21          | IF expression THEN statement ELSE statement
   22          | WHILE expression DO statement
   23          | FOR ID ASSIGNOP expression TO expression DO statement
   24          | WRITE LPAREN print_list RPAREN
   25          | READ LPAREN read_list RPAREN
   26          | compound_statement

   27 print_list: print_item
   28           | print_list COMMA print_item

   29 print_item: expression
   30           | STRING

   31 read_list: ID
   32          | read_list COMMA ID

   33 expression: expression PLUSOP expression
   34           | expression MINUSOP expression
   35           | expression MULTIPLICA expression
   36           | expression DIVIDE expression
   37           | MINUSOP expression
   38           | LPAREN expression RPAREN
   39           | ID
   40           | INTLITERAL


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256)
    STRING <lexema> (258) 30
    ID <lexema> (259) 2 5 9 10 12 13 19 23 31 32 39
    INTLITERAL <lexema> (260) 40
    BEGINN (261) 14
    END (262) 14
    READ (263) 25
    WRITE (264) 24
    LPAREN (265) 2 5 24 25 38
    RPAREN (266) 2 5 24 25 38
    SEMICOLON (267) 2 3 6 7 18
    COMMA (268) 10 13 28 32
    ASSIGNOP (269) 12 13 19 23
    PLUSOP (270) 33
    MINUSOP (271) 34 37
    DOSPUNTOS (272) 5 6
    MULTIPLICA (273) 35
    DIVIDE (274) 36
    PUNTO (275) 2
    PROGRAM (276) 2
    CONST (277) 5 7
    VAR (278) 6
    IF (279) 20 21
    THEN (280) 20 21
    ELSE (281) 21
    WHILE (282) 22
    DO (283) 22 23
    FOR (284) 23
    TO (285) 23
    INTEGER (286) 11
    FUNCTION (287) 5
    UMINUSOP (288)


No terminales con las reglas donde aparecen

    $accept (34)
        on left: 0
    program (35)
        on left: 2
        on right: 0
    $@1 (36)
        on left: 1
        on right: 2
    functions (37)
        on left: 3 4
        on right: 2 3
    function (38)
        on left: 5
        on right: 3
    declarations <codigo> (39)
        on left: 6 7 8
        on right: 2 5 6 7
    identifiers (40)
        on left: 9 10
        on right: 5 6 10
    type (41)
        on left: 11
        on right: 5 6
    constants <codigo> (42)
        on left: 12 13
        on right: 7 13
    compound_statement <codigo> (43)
        on left: 14
        on right: 2 5 26
    optional_statements <codigo> (44)
        on left: 15 16
        on right: 14
    statements <codigo> (45)
        on left: 17 18
        on right: 15 18
    statement <codigo> (46)
        on left: 19 20 21 22 23 24 25 26
        on right: 17 18 20 21 22 23
    print_list <codigo> (47)
        on left: 27 28
        on right: 24 28
    print_item <codigo> (48)
        on left: 29 30
        on right: 27 28
    read_list <codigo> (49)
        on left: 31 32
        on right: 25 32
    expression <codigo> (50)
        on left: 33 34 35 36 37 38 39 40
        on right: 12 13 19 20 21 22 23 29 33 34 35 36 37 38


Estado 0

    0 $accept: . program $end

    $default  reduce usando la regla 1 ($@1)

    program  ir al estado 1
    $@1      ir al estado 2


Estado 1

    0 $accept: program . $end

    $end  desplazar e ir al estado 3


Estado 2

    2 program: $@1 . PROGRAM ID LPAREN RPAREN SEMICOLON functions declarations compound_statement PUNTO

    PROGRAM  desplazar e ir al estado 4


Estado 3

    0 $accept: program $end .

    $default  aceptar


Estado 4

    2 program: $@1 PROGRAM . ID LPAREN RPAREN SEMICOLON functions declarations compound_statement PUNTO

    ID  desplazar e ir al estado 5


Estado 5

    2 program: $@1 PROGRAM ID . LPAREN RPAREN SEMICOLON functions declarations compound_statement PUNTO

    LPAREN  desplazar e ir al estado 6


Estado 6

    2 program: $@1 PROGRAM ID LPAREN . RPAREN SEMICOLON functions declarations compound_statement PUNTO

    RPAREN  desplazar e ir al estado 7


Estado 7

    2 program: $@1 PROGRAM ID LPAREN RPAREN . SEMICOLON functions declarations compound_statement PUNTO

    SEMICOLON  desplazar e ir al estado 8


Estado 8

    2 program: $@1 PROGRAM ID LPAREN RPAREN SEMICOLON . functions declarations compound_statement PUNTO

    $default  reduce usando la regla 4 (functions)

    functions  ir al estado 9


Estado 9

    2 program: $@1 PROGRAM ID LPAREN RPAREN SEMICOLON functions . declarations compound_statement PUNTO
    3 functions: functions . function SEMICOLON

    FUNCTION  desplazar e ir al estado 10

    $default  reduce usando la regla 8 (declarations)

    function      ir al estado 11
    declarations  ir al estado 12


Estado 10

    5 function: FUNCTION . ID LPAREN CONST identifiers DOSPUNTOS type RPAREN DOSPUNTOS type declarations compound_statement

    ID  desplazar e ir al estado 13


Estado 11

    3 functions: functions function . SEMICOLON

    SEMICOLON  desplazar e ir al estado 14


Estado 12

    2 program: $@1 PROGRAM ID LPAREN RPAREN SEMICOLON functions declarations . compound_statement PUNTO
    6 declarations: declarations . VAR identifiers DOSPUNTOS type SEMICOLON
    7             | declarations . CONST constants SEMICOLON

    BEGINN  desplazar e ir al estado 15
    CONST   desplazar e ir al estado 16
    VAR     desplazar e ir al estado 17

    compound_statement  ir al estado 18


Estado 13

    5 function: FUNCTION ID . LPAREN CONST identifiers DOSPUNTOS type RPAREN DOSPUNTOS type declarations compound_statement

    LPAREN  desplazar e ir al estado 19


Estado 14

    3 functions: functions function SEMICOLON .

    $default  reduce usando la regla 3 (functions)


Estado 15

   14 compound_statement: BEGINN . optional_statements END

    ID      desplazar e ir al estado 20
    BEGINN  desplazar e ir al estado 15
    READ    desplazar e ir al estado 21
    WRITE   desplazar e ir al estado 22
    IF      desplazar e ir al estado 23
    WHILE   desplazar e ir al estado 24
    FOR     desplazar e ir al estado 25

    $default  reduce usando la regla 16 (optional_statements)

    compound_statement   ir al estado 26
    optional_statements  ir al estado 27
    statements           ir al estado 28
    statement            ir al estado 29


Estado 16

    7 declarations: declarations CONST . constants SEMICOLON

    ID  desplazar e ir al estado 30

    constants  ir al estado 31


Estado 17

    6 declarations: declarations VAR . identifiers DOSPUNTOS type SEMICOLON

    ID  desplazar e ir al estado 32

    identifiers  ir al estado 33


Estado 18

    2 program: $@1 PROGRAM ID LPAREN RPAREN SEMICOLON functions declarations compound_statement . PUNTO

    PUNTO  desplazar e ir al estado 34


Estado 19

    5 function: FUNCTION ID LPAREN . CONST identifiers DOSPUNTOS type RPAREN DOSPUNTOS type declarations compound_statement

    CONST  desplazar e ir al estado 35


Estado 20

   19 statement: ID . ASSIGNOP expression

    ASSIGNOP  desplazar e ir al estado 36


Estado 21

   25 statement: READ . LPAREN read_list RPAREN

    LPAREN  desplazar e ir al estado 37


Estado 22

   24 statement: WRITE . LPAREN print_list RPAREN

    LPAREN  desplazar e ir al estado 38


Estado 23

   20 statement: IF . expression THEN statement
   21          | IF . expression THEN statement ELSE statement

    ID          desplazar e ir al estado 39
    INTLITERAL  desplazar e ir al estado 40
    LPAREN      desplazar e ir al estado 41
    MINUSOP     desplazar e ir al estado 42

    expression  ir al estado 43


Estado 24

   22 statement: WHILE . expression DO statement

    ID          desplazar e ir al estado 39
    INTLITERAL  desplazar e ir al estado 40
    LPAREN      desplazar e ir al estado 41
    MINUSOP     desplazar e ir al estado 42

    expression  ir al estado 44


Estado 25

   23 statement: FOR . ID ASSIGNOP expression TO expression DO statement

    ID  desplazar e ir al estado 45


Estado 26

   26 statement: compound_statement .

    $default  reduce usando la regla 26 (statement)


Estado 27

   14 compound_statement: BEGINN optional_statements . END

    END  desplazar e ir al estado 46


Estado 28

   15 optional_statements: statements .
   18 statements: statements . SEMICOLON statement

    SEMICOLON  desplazar e ir al estado 47

    $default  reduce usando la regla 15 (optional_statements)


Estado 29

   17 statements: statement .

    $default  reduce usando la regla 17 (statements)


Estado 30

   12 constants: ID . ASSIGNOP expression

    ASSIGNOP  desplazar e ir al estado 48


Estado 31

    7 declarations: declarations CONST constants . SEMICOLON
   13 constants: constants . COMMA ID ASSIGNOP expression

    SEMICOLON  desplazar e ir al estado 49
    COMMA      desplazar e ir al estado 50


Estado 32

    9 identifiers: ID .

    $default  reduce usando la regla 9 (identifiers)


Estado 33

    6 declarations: declarations VAR identifiers . DOSPUNTOS type SEMICOLON
   10 identifiers: identifiers . COMMA ID

    COMMA      desplazar e ir al estado 51
    DOSPUNTOS  desplazar e ir al estado 52


Estado 34

    2 program: $@1 PROGRAM ID LPAREN RPAREN SEMICOLON functions declarations compound_statement PUNTO .

    $default  reduce usando la regla 2 (program)


Estado 35

    5 function: FUNCTION ID LPAREN CONST . identifiers DOSPUNTOS type RPAREN DOSPUNTOS type declarations compound_statement

    ID  desplazar e ir al estado 32

    identifiers  ir al estado 53


Estado 36

   19 statement: ID ASSIGNOP . expression

    ID          desplazar e ir al estado 39
    INTLITERAL  desplazar e ir al estado 40
    LPAREN      desplazar e ir al estado 41
    MINUSOP     desplazar e ir al estado 42

    expression  ir al estado 54


Estado 37

   25 statement: READ LPAREN . read_list RPAREN

    ID  desplazar e ir al estado 55

    read_list  ir al estado 56


Estado 38

   24 statement: WRITE LPAREN . print_list RPAREN

    STRING      desplazar e ir al estado 57
    ID          desplazar e ir al estado 39
    INTLITERAL  desplazar e ir al estado 40
    LPAREN      desplazar e ir al estado 41
    MINUSOP     desplazar e ir al estado 42

    print_list  ir al estado 58
    print_item  ir al estado 59
    expression  ir al estado 60


Estado 39

   39 expression: ID .

    $default  reduce usando la regla 39 (expression)


Estado 40

   40 expression: INTLITERAL .

    $default  reduce usando la regla 40 (expression)


Estado 41

   38 expression: LPAREN . expression RPAREN

    ID          desplazar e ir al estado 39
    INTLITERAL  desplazar e ir al estado 40
    LPAREN      desplazar e ir al estado 41
    MINUSOP     desplazar e ir al estado 42

    expression  ir al estado 61


Estado 42

   37 expression: MINUSOP . expression

    ID          desplazar e ir al estado 39
    INTLITERAL  desplazar e ir al estado 40
    LPAREN      desplazar e ir al estado 41
    MINUSOP     desplazar e ir al estado 42

    expression  ir al estado 62


Estado 43

   20 statement: IF expression . THEN statement
   21          | IF expression . THEN statement ELSE statement
   33 expression: expression . PLUSOP expression
   34           | expression . MINUSOP expression
   35           | expression . MULTIPLICA expression
   36           | expression . DIVIDE expression

    PLUSOP      desplazar e ir al estado 63
    MINUSOP     desplazar e ir al estado 64
    MULTIPLICA  desplazar e ir al estado 65
    DIVIDE      desplazar e ir al estado 66
    THEN        desplazar e ir al estado 67


Estado 44

   22 statement: WHILE expression . DO statement
   33 expression: expression . PLUSOP expression
   34           | expression . MINUSOP expression
   35           | expression . MULTIPLICA expression
   36           | expression . DIVIDE expression

    PLUSOP      desplazar e ir al estado 63
    MINUSOP     desplazar e ir al estado 64
    MULTIPLICA  desplazar e ir al estado 65
    DIVIDE      desplazar e ir al estado 66
    DO          desplazar e ir al estado 68


Estado 45

   23 statement: FOR ID . ASSIGNOP expression TO expression DO statement

    ASSIGNOP  desplazar e ir al estado 69


Estado 46

   14 compound_statement: BEGINN optional_statements END .

    $default  reduce usando la regla 14 (compound_statement)


Estado 47

   18 statements: statements SEMICOLON . statement

    ID      desplazar e ir al estado 20
    BEGINN  desplazar e ir al estado 15
    READ    desplazar e ir al estado 21
    WRITE   desplazar e ir al estado 22
    IF      desplazar e ir al estado 23
    WHILE   desplazar e ir al estado 24
    FOR     desplazar e ir al estado 25

    compound_statement  ir al estado 26
    statement           ir al estado 70


Estado 48

   12 constants: ID ASSIGNOP . expression

    ID          desplazar e ir al estado 39
    INTLITERAL  desplazar e ir al estado 40
    LPAREN      desplazar e ir al estado 41
    MINUSOP     desplazar e ir al estado 42

    expression  ir al estado 71


Estado 49

    7 declarations: declarations CONST constants SEMICOLON .

    $default  reduce usando la regla 7 (declarations)


Estado 50

   13 constants: constants COMMA . ID ASSIGNOP expression

    ID  desplazar e ir al estado 72


Estado 51

   10 identifiers: identifiers COMMA . ID

    ID  desplazar e ir al estado 73


Estado 52

    6 declarations: declarations VAR identifiers DOSPUNTOS . type SEMICOLON

    INTEGER  desplazar e ir al estado 74

    type  ir al estado 75


Estado 53

    5 function: FUNCTION ID LPAREN CONST identifiers . DOSPUNTOS type RPAREN DOSPUNTOS type declarations compound_statement
   10 identifiers: identifiers . COMMA ID

    COMMA      desplazar e ir al estado 51
    DOSPUNTOS  desplazar e ir al estado 76


Estado 54

   19 statement: ID ASSIGNOP expression .
   33 expression: expression . PLUSOP expression
   34           | expression . MINUSOP expression
   35           | expression . MULTIPLICA expression
   36           | expression . DIVIDE expression

    PLUSOP      desplazar e ir al estado 63
    MINUSOP     desplazar e ir al estado 64
    MULTIPLICA  desplazar e ir al estado 65
    DIVIDE      desplazar e ir al estado 66

    $default  reduce usando la regla 19 (statement)


Estado 55

   31 read_list: ID .

    $default  reduce usando la regla 31 (read_list)


Estado 56

   25 statement: READ LPAREN read_list . RPAREN
   32 read_list: read_list . COMMA ID

    RPAREN  desplazar e ir al estado 77
    COMMA   desplazar e ir al estado 78


Estado 57

   30 print_item: STRING .

    $default  reduce usando la regla 30 (print_item)


Estado 58

   24 statement: WRITE LPAREN print_list . RPAREN
   28 print_list: print_list . COMMA print_item

    RPAREN  desplazar e ir al estado 79
    COMMA   desplazar e ir al estado 80


Estado 59

   27 print_list: print_item .

    $default  reduce usando la regla 27 (print_list)


Estado 60

   29 print_item: expression .
   33 expression: expression . PLUSOP expression
   34           | expression . MINUSOP expression
   35           | expression . MULTIPLICA expression
   36           | expression . DIVIDE expression

    PLUSOP      desplazar e ir al estado 63
    MINUSOP     desplazar e ir al estado 64
    MULTIPLICA  desplazar e ir al estado 65
    DIVIDE      desplazar e ir al estado 66

    $default  reduce usando la regla 29 (print_item)


Estado 61

   33 expression: expression . PLUSOP expression
   34           | expression . MINUSOP expression
   35           | expression . MULTIPLICA expression
   36           | expression . DIVIDE expression
   38           | LPAREN expression . RPAREN

    RPAREN      desplazar e ir al estado 81
    PLUSOP      desplazar e ir al estado 63
    MINUSOP     desplazar e ir al estado 64
    MULTIPLICA  desplazar e ir al estado 65
    DIVIDE      desplazar e ir al estado 66


Estado 62

   33 expression: expression . PLUSOP expression
   34           | expression . MINUSOP expression
   35           | expression . MULTIPLICA expression
   36           | expression . DIVIDE expression
   37           | MINUSOP expression .

    $default  reduce usando la regla 37 (expression)


Estado 63

   33 expression: expression PLUSOP . expression

    ID          desplazar e ir al estado 39
    INTLITERAL  desplazar e ir al estado 40
    LPAREN      desplazar e ir al estado 41
    MINUSOP     desplazar e ir al estado 42

    expression  ir al estado 82


Estado 64

   34 expression: expression MINUSOP . expression

    ID          desplazar e ir al estado 39
    INTLITERAL  desplazar e ir al estado 40
    LPAREN      desplazar e ir al estado 41
    MINUSOP     desplazar e ir al estado 42

    expression  ir al estado 83


Estado 65

   35 expression: expression MULTIPLICA . expression

    ID          desplazar e ir al estado 39
    INTLITERAL  desplazar e ir al estado 40
    LPAREN      desplazar e ir al estado 41
    MINUSOP     desplazar e ir al estado 42

    expression  ir al estado 84


Estado 66

   36 expression: expression DIVIDE . expression

    ID          desplazar e ir al estado 39
    INTLITERAL  desplazar e ir al estado 40
    LPAREN      desplazar e ir al estado 41
    MINUSOP     desplazar e ir al estado 42

    expression  ir al estado 85


Estado 67

   20 statement: IF expression THEN . statement
   21          | IF expression THEN . statement ELSE statement

    ID      desplazar e ir al estado 20
    BEGINN  desplazar e ir al estado 15
    READ    desplazar e ir al estado 21
    WRITE   desplazar e ir al estado 22
    IF      desplazar e ir al estado 23
    WHILE   desplazar e ir al estado 24
    FOR     desplazar e ir al estado 25

    compound_statement  ir al estado 26
    statement           ir al estado 86


Estado 68

   22 statement: WHILE expression DO . statement

    ID      desplazar e ir al estado 20
    BEGINN  desplazar e ir al estado 15
    READ    desplazar e ir al estado 21
    WRITE   desplazar e ir al estado 22
    IF      desplazar e ir al estado 23
    WHILE   desplazar e ir al estado 24
    FOR     desplazar e ir al estado 25

    compound_statement  ir al estado 26
    statement           ir al estado 87


Estado 69

   23 statement: FOR ID ASSIGNOP . expression TO expression DO statement

    ID          desplazar e ir al estado 39
    INTLITERAL  desplazar e ir al estado 40
    LPAREN      desplazar e ir al estado 41
    MINUSOP     desplazar e ir al estado 42

    expression  ir al estado 88


Estado 70

   18 statements: statements SEMICOLON statement .

    $default  reduce usando la regla 18 (statements)


Estado 71

   12 constants: ID ASSIGNOP expression .
   33 expression: expression . PLUSOP expression
   34           | expression . MINUSOP expression
   35           | expression . MULTIPLICA expression
   36           | expression . DIVIDE expression

    PLUSOP      desplazar e ir al estado 63
    MINUSOP     desplazar e ir al estado 64
    MULTIPLICA  desplazar e ir al estado 65
    DIVIDE      desplazar e ir al estado 66

    $default  reduce usando la regla 12 (constants)


Estado 72

   13 constants: constants COMMA ID . ASSIGNOP expression

    ASSIGNOP  desplazar e ir al estado 89


Estado 73

   10 identifiers: identifiers COMMA ID .

    $default  reduce usando la regla 10 (identifiers)


Estado 74

   11 type: INTEGER .

    $default  reduce usando la regla 11 (type)


Estado 75

    6 declarations: declarations VAR identifiers DOSPUNTOS type . SEMICOLON

    SEMICOLON  desplazar e ir al estado 90


Estado 76
